--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "serve": "NODE_ENV=development webpack serve --mode development --port 3000  --open",
-    "serve-prod": "NODE_ENV=production webpack serve --mode development --port 3000  --open",
-    "build": "NODE_ENV=production webpack"
+    "serve": "NODE_ENV=development webpack serve --port 3000  --open",
+    "serve-prod": "NODE_ENV=production webpack serve --port 3000  --open",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
